<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/label_login"
        android:layout_marginBottom="20dp" />
    <TextView
        android:id="@+id/labelUsuario"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:text="@string/usuario"
        android:layout_below="@id/login" />
    <EditText
        android:id="@+id/usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelUsuario"
        android:inputType="textEmailAddress" />
    <TextView
        android:id="@+id/labelSenha"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:text="@string/senha"
        android:layout_below="@id/usuario" />
    <EditText
        android:id="@+id/senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelSenha"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:layout_below="@id/senha"
        android:onClick="login"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:textAllCaps="false"
        android:text="@string/esqueceuSenha"
        android:layout_below="@id/entrar" />

</RelativeLayout>

